Another attempt to fix the bug where the bottom of the Plugin Store has extra padding

--- a/src/web/assets/pluginstore/src/sass/layout.scss
+++ b/src/web/assets/pluginstore/src/sass/layout.scss
@@ -11,7 +11,7 @@
 
 .ps-wrapper {
   @apply .flex .flex-1 .flex-col;
-  margin-bottom: 0;
+  padding-bottom: 0 !important;
 
   .ps-sidebar {
     @apply .bg-grey-lightest .px-6 .py-6 .w-full .border-b .border-solid .border-grey-light;
